--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 								<a href="/" class="button buttons-hover button-big button-yellow ">Open Account</a>
 							</div>
 						</div>
-						<div class="main-block__image animation-opacity _anim-items">
+						<div class="main-block__image ">
 							<img src="img/page/page1/image-container.png" alt="Image">				
 						</div>
 					</div>
@@ -178,7 +178,7 @@
 						</div>
 						<div class="main-case__bd">
 							<div class="main-case__body case-body ">
-								<div class="case-body__item card-item  animation-opacity  _anim-items bac-black card-item-center">
+								<div class="case-body__item card-item  animation-left  _anim-items bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" width="28" height="28" viewBox="0 0 23 28" fill="none">
@@ -199,7 +199,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="case-body__item card-item animation-opacity  _anim-items bac-black card-item-center">
+								<div class="case-body__item card-item  bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 27 20" fill="none">
@@ -224,7 +224,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="case-body__item card-item animation-opacity _anim-items bac-black card-item-center">
+								<div class="case-body__item card-item animation-left  _anim-items bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 30 30" fill="none">
@@ -241,7 +241,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="case-body__item card-item animation-opacity  _anim-items bac-black card-item-center">
+								<div class="case-body__item card-item  bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 30 30" fill="none">
@@ -343,7 +343,7 @@
 								</div>
 							</div>
 							<div class="main-case__body case-body">
-								<div class="case-body__item card-item  animation-opacity  _anim-items bac-black card-item-center">
+								<div class="case-body__item card-item  bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg  class="path6" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 30 30" fill="none">
@@ -360,7 +360,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="case-body__item card-item  animation-opacity  _anim-items bac-black card-item-center">
+								<div class="case-body__item card-item  animation-right _anim-items   bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 30 30" fill="none">
@@ -377,7 +377,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="case-body__item card-item animation-opacity  _anim-items   bac-black card-item-center">
+								<div class="case-body__item card-item   bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 30 30" fill="none">
@@ -393,7 +393,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="case-body__item card-item  animation-opacity  _anim-items bac-black card-item-center">
+								<div class="case-body__item card-item  animation-right _anim-items bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" class="path4" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 30 30" fill="none">
@@ -638,7 +638,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="main-asked__button">
+						<div class="main-asked__button animation-bottom _anim-items">
 							<p id="btn-open"  class="button-active"> Load All FAQ’s
 								<svg  xmlns="http://www.w3.org/2000/svg" width="22" height="23" viewBox="0 0 22 23" fill="none">
 								<path class="main-asked__path" d="M16.5 8.75L11 14.25L5.5 8.75" stroke="white" stroke-width="2"/>
