--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 									<p>Enjoy easy and convenient access to your funds with our range of checking account options. Benefit from features such as online and mobile banking, debit cards, and free ATM access.</p>
 								</div>
 							</div>
-							<div class="main-products__item card-item card-item-center animation-opacity _anim-items">
+							<div class="main-products__item card-item card-item-center animation-hidden _anim-items">
 								<div class="card-item__header card-header">
 									<div class="card-header__image">
 										<img src="img/icon/ion-cart-download.svg" alt="Image">
@@ -178,7 +178,7 @@
 						</div>
 						<div class="main-case__bd">
 							<div class="main-case__body case-body ">
-								<div class="case-body__item card-item  animation-left  _anim-items bac-black card-item-center">
+								<div class="case-body__item card-item   bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" width="28" height="28" viewBox="0 0 23 28" fill="none">
@@ -224,7 +224,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="case-body__item card-item animation-left  _anim-items bac-black card-item-center">
+								<div class="case-body__item card-item  bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 30 30" fill="none">
@@ -360,7 +360,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="case-body__item card-item  animation-right _anim-items   bac-black card-item-center">
+								<div class="case-body__item card-item    bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 30 30" fill="none">
@@ -393,7 +393,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="case-body__item card-item  animation-right _anim-items bac-black card-item-center">
+								<div class="case-body__item card-item  bac-black card-item-center">
 									<div class="card-item__header card-header">
 										<div class="card-header__image">
 											<svg class="path6" class="path4" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 30 30" fill="none">
@@ -427,7 +427,7 @@
 							</div>
 						</div>
 						<div class="main-tabs__content _anim-items">
-							<div class="main-tabs__trigger-items trigger-items animation-left _anim-items">
+							<div class="main-tabs__trigger-items trigger-items _anim-items">
 								<div class="trigger-items__link _active-tab">
 									<a class="trigger" href="">Online Banking</a>
 								</div>
