--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" lass="btn">
 	 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,28 +31,28 @@
                 <nav class="header__menu menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a id="menu-item" href='#' class="menu__link menu__link-m button">Home</a>
+                            <a id="menu-item" href='index.html' class="menu__link menu__link-m button">Home</a>
                             <span></span>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='#' class="menu__link menu__link-m  button">Careers</a>
+                            <a id="menu-item" href='career.html' class="menu__link menu__link-m  button">Careers</a>
                             <span></span>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='#' class="menu__link menu__link-m button">About</a>
+                            <a id="menu-item" href='about.html' class="menu__link menu__link-m button">About</a>
                             <span></span>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='#' class="menu__link menu__link-m menu__link-m button">Security</a>
+                            <a id="menu-item" href='security.html' class="menu__link menu__link-m menu__link-m button">Security</a>
                             <span></span>
                         </li>
                     </ul>
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a id="menu-item" href='#' class="menu__link menu__link-m button button-black">Sign Up</a>
+                            <a id="menu-item" href='login.html' class="menu__link menu__link-m button button-black">Sign Up</a>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='#' class=" menu__link-y button">Login</a>
+                            <a id="menu-item" href='signup.html' class=" menu__link-y button">Login</a>
                         </li>
                     </ul>   
                 </nav>
@@ -480,8 +480,8 @@
 									<a class="trigger" href="">Customer Support</a>
 								</div>
 							</div>
-							<div class="main-tabs__content-items tab-contents ">
-								<div class="tab-contents__body ">
+							<div class="main-tabs__content-items tab-content ">
+								<div class="tab-content__body ">
 									<div class="tab-content__block block">
 										<div class="block__title title-22">
 											<h3>24/7 Account Access</h3>
@@ -529,7 +529,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="tab-contents__body _active-tab">
+								<div class="tab-content__body _active-tab">
 									<div class="tab-content__block block">
 										<div class="block__title title-22">
 											<h3>24/7 Account Access</h3>
@@ -577,7 +577,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="tab-contents__body ">
+								<div class="tab-content__body ">
 									<div class="tab-content__block block">
 										<div class="block__title title-22">
 											<h3>24/7 Account Access</h3>
