--- a/about.html
+++ b/about.html
@@ -49,10 +49,10 @@
                     </ul>
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a id="menu-item" href='login.html' class="menu__link menu__link-m button button-black">Sign Up</a>
+                            <a id="menu-item" href='signup.html' class="menu__link menu__link-m button button-black">Sign Up</a>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='signup.html' class=" menu__link-y button">Login</a>
+                            <a id="menu-item" href='login.html' class=" menu__link-y button">Login</a>
                         </li>
                     </ul>   
                 </nav>
@@ -139,7 +139,7 @@
                     <div class="main-release__container">
                         <div class='main-release__header-item header-item block-margin'>
                             <div class='header-item__title'>
-                                <h2>Press Releases</h2>
+                                <h2><span>Press Releases</span></h2>
                             </div>
                             <div class='header-item__text text'>
                                 <p>Stay updated with the latest happenings and exciting developments at YourBank through our press releases.</p>
@@ -327,7 +327,7 @@
     </div>
 </footer>
 		</div>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@6/swiper-bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<script src="js/app.min.js"></script>
 	</body>
 </html>
