--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" lass="btn">
+<html lang="en" class="btn">
 	 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,10 +49,10 @@
                     </ul>
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a id="menu-item" href='login.html' class="menu__link menu__link-m button button-black">Sign Up</a>
+                            <a id="menu-item" href='signup.html' class="menu__link menu__link-m button button-black">Sign Up</a>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='signup.html' class=" menu__link-y button">Login</a>
+                            <a id="menu-item" href='login.html' class=" menu__link-y button">Login</a>
                         </li>
                     </ul>   
                 </nav>
@@ -85,12 +85,150 @@
 								</div>
 							</div>
 							<div class="main-block__button animation-opacity _anim-items">
-								<a href="/" class="button  button-big button-yellow">Open Account</a>
+								<a href="/" class="button  button-big button-yellow rollIn _anim-items">Open Account</a>
 							</div>
 						</div>
+						<div class="main-block__current current">
+							<div class="current__item  current-item">
+								<div class="current-item__title">
+									<h4>Your Transactions</h4>
+								</div>
+								<div class="current-item__items">
+									<div class="current-item__action action">
+										<div class="action__info action-info">
+											<div class="action-info__image">
+												<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21" fill="none">
+													<path fill-rule="evenodd" clip-rule="evenodd" d="M13.8756 2.32065C13.5823 2.63646 13.6006 3.1302 13.9164 3.42345L16.1018 5.45273L7.16427 5.45273C6.73331 5.45273 6.38394 5.8021 6.38394 6.23307C6.38394 6.66403 6.73331 7.0134 7.16427 7.0134L16.1018 7.0134L13.9164 9.04268C13.6006 9.33593 13.5823 9.82967 13.8756 10.1455C14.1688 10.4613 14.6625 10.4796 14.9784 10.1863L18.6199 6.80489C18.7789 6.65724 18.8693 6.45005 18.8693 6.23306C18.8693 6.01608 18.7789 5.80889 18.6199 5.66124L14.9784 2.2798C14.6625 1.98655 14.1688 2.00484 13.8756 2.32065ZM7.21587 10.6442C6.92262 10.3284 6.42888 10.3101 6.11307 10.6033L2.47152 13.9848C2.31252 14.1324 2.22217 14.3396 2.22217 14.5566C2.22217 14.7736 2.31252 14.9808 2.47152 15.1284L6.11307 18.5099C6.42888 18.8031 6.92262 18.7848 7.21587 18.469C7.50913 18.1532 7.49084 17.6595 7.17503 17.3662L4.98965 15.3369H13.9272C14.3581 15.3369 14.7075 14.9876 14.7075 14.5566C14.7075 14.1256 14.3581 13.7763 13.9272 13.7763H4.98965L7.17503 11.747C7.49084 11.4537 7.50913 10.96 7.21587 10.6442Z" fill="#1C1C1C"/>
+												</svg>
+											</div>
+											<div class="action-info__label">
+												<p class="action-info__title">Transaction</p>
+												<div class="action-info__sub-title">
+													<p>Joel Kenley</p>
+												</div>
+											</div>
+										</div>
+										<div class="action__price">
+											<p>-$68.00</p>
+										</div>
+									</div>
+								</div>
+								<div class="current-item__title">
+									<h4>Money Exchange</h4>
+								</div>
+								<div class="current-item__exchange exchange">
+									<div class="exchange__item">
+										<div class="exchange__currency currency _active">
+											<div class="currency__body">
+												<div class="currency__image">
+													<div class="currency__image">
+														<img src="img/Image.svg" alt="image">
+													</div>
+												</div>
+												<div class="currency__name">
+													<p>INR</p>
+												</div>
+											</div>
+											<div class="currency__country">
+												<p>Indian Rupees</p>
+											</div>
+										</div>
+										<div class="exchange__currency currency ">
+											<div class="currency__body">
+												<div class="currency__image">
+													<div class="currency__image">
+														<img src="img/Image.svg" alt="image">
+													</div>
+												</div>
+												<div class="currency__name">
+													<p>INR</p>
+												</div>
+											</div>
+											<div class="currency__country">
+												<p>Indian Rupees</p>
+											</div>
+										</div>
+										<div class="exchange__currency currency ">
+											<div class="currency__body">
+												<div class="currency__image">
+													<div class="currency__image">
+														<img src="img/Image.svg" alt="image">
+													</div>
+												</div>
+												<div class="currency__name">
+													<p>INR</p>
+												</div>
+											</div>
+											<div class="currency__country">
+												<p>Indian Rupees</p>
+											</div>
+										</div>
+										<div class="exchange__currency currency ">
+											<div class="currency__body">
+												<div class="currency__image">
+													<div class="currency__image">
+														<img src="img/Image.svg" alt="image">
+													</div>
+												</div>
+												<div class="currency__name">
+													<p>INR</p>
+												</div>
+											</div>
+											<div class="currency__country">
+												<p>Indian Rupees</p>
+											</div>
+										</div>
+										<div class="exchange__currency currency ">
+											<div class="currency__body">
+												<div class="currency__image">
+													<div class="currency__image">
+														<img src="img/Image.svg" alt="image">
+													</div>
+												</div>
+												<div class="currency__name">
+													<p>INR</p>
+												</div>
+											</div>
+											<div class="currency__country">
+												<p>Indian Rupees</p>
+											</div>
+										</div>
+									</div>
+									<div class="exchange__item">
+										<div class="exchange__currency currency _active">
+											<div class="currency__body">
+												<div class="currency__image">
+													<img src="img/usa.svg" alt="image">
+												</div>
+												<div class="currency__name">
+													<p>USD</p>
+												</div>
+											</div>
+											<div class="currency__country">
+												<p>United States Dollar</p>
+											</div>
+										</div>
+									</div>
+									<div class="exchange__item">
+										<input class="exchange__input" type="text" placeholder="5.0000" value="5,000">
+									</div>
+									<div class="exchange__item">
+										<input class="exchange__input" type="text" placeholder="12.00" value="12,00">
+									</div>
+								</div>
+								<div class="current-item__btn">
+									<button>Exchange</button>
+								</div>
+							</div>
+						</div>
+
+
+
+						<!--
 						<div class="main-block__image ">
 							<img src="img/page/page1/image-container.png" alt="Image">				
 						</div>
+						-->
 					</div>
 				</section>
 				<section class="main__products main-products">
@@ -104,9 +242,9 @@
 									<p>Discover a range of comprehensive and customizable banking products at YourBank, designed to suit your unique financial needs and aspirations</p>
 								</div>
 							</div>
-							<div class="main-products__block-button block-button">
-								<a href="/" class="block-button__button button  trigger-button-for button-active _active-tab trigger">For Individuals</a>
-								<a href="/" class="block-button__button button  trigger-button-for button-active trigger">For Businesses</a>
+							<div class="main-products__block-button block-button ">
+								<a href="/" class="block-button__button button  trigger-button-for button-active _active-tab trigger rollIn _anim-items">For Individuals</a>
+								<a href="/" class="block-button__button button  trigger-button-for button-active trigger rollIn _anim-items">For Businesses</a>
 							</div>
 						</div>
 						<div class="main-products__content">
@@ -678,8 +816,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="main-asked__button animation-bottom _anim-items">
-							<p id="btn-open"  class="button-active "> Load All FAQ’s
+						<div class="main-asked__button animation-bottom _anim-items ">
+							<p id="btn-open"  class="button-active"> Load All FAQ’s
 								<svg  xmlns="http://www.w3.org/2000/svg" width="22" height="23" viewBox="0 0 22 23" fill="none">
 								<path class="main-asked__path" d="M16.5 8.75L11 14.25L5.5 8.75" stroke="white" stroke-width="2"/>
 								</svg>
@@ -699,8 +837,8 @@
 								</div>
 							</div>
 							<div class="main-slider__block-button block-button">
-								<a href="/" class="block-button__button button button-trigger-slider trigger-2 _active-tab">For Individuals</a>
-								<a href="/" class="block-button__button button button-trigger-slider trigger-2">For Businesses</a>
+								<a href="/" class="block-button__button button button-trigger-slider trigger-2 _active-tab rollIn _anim-items">For Individuals</a>
+								<a href="/" class="block-button__button button button-trigger-slider trigger-2 rollIn _anim-items">For Businesses</a>
 							</div>
 						</div>
 						<div class="main-slider__content">
@@ -985,7 +1123,7 @@
 								</div>
 							</div>
 							<div class="main-start__button">
-								<a href="/" class="button button-big button-yellow">Open Account</a>
+								<a href="/" class="button button-big button-yellow rollIn _anim-items">Open Account</a>
 							</div>
 						</div>
 					</div>
