--- a/security.html
+++ b/security.html
@@ -49,10 +49,10 @@
                     </ul>
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a id="menu-item" href='login.html' class="menu__link menu__link-m button button-black">Sign Up</a>
+                            <a id="menu-item" href='signup.html' class="menu__link menu__link-m button button-black">Sign Up</a>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='signup.html' class=" menu__link-y button">Login</a>
+                            <a id="menu-item" href='login.html' class=" menu__link-y button">Login</a>
                         </li>
                     </ul>   
                 </nav>
@@ -335,7 +335,7 @@
     </div>
 </footer>
 		</div>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@6/swiper-bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<script src="js/app.min.js"></script>
 	</body>
 </html>
