--- a/career.html
+++ b/career.html
@@ -290,7 +290,7 @@
                                     </li>
                                 </ul>
                                 <div class="job__button">
-                                    <a class="button  button-big button-yellow rollIn _anim-items" href="/">Apply Now</a>
+                                    <a class="button  button-big button-yellow " href="/">Apply Now</a>
                                 </div>
                             </div>
                             <div class="main-openings__job bac-black job">
@@ -337,7 +337,7 @@
                                     </li>
                                 </ul>
                                 <div class="job__button">
-                                    <a class="button  button-big button-yellow rollIn _anim-items" href="/">Apply Now</a>
+                                    <a class="button  button-big button-yellow " href="/">Apply Now</a>
                                 </div>
                             </div>
                             <div class="main-openings__job bac-black job">
@@ -384,7 +384,7 @@
                                     </li>
                                 </ul>
                                 <div class="job__button">
-                                    <a class="button  button-big button-yellow rollIn _anim-items" href="/">Apply Now</a>
+                                    <a class="button  button-big button-yellow " href="/">Apply Now</a>
                                 </div>
                             </div>
                         </div>
@@ -463,7 +463,7 @@
 								</div>
 							</div>
 							<div class="main-start__button">
-								<a href="/" class="button button-big button-yellow rollIn _anim-items">Open Account</a>
+								<a href="/" class="button button-big button-yellow ">Open Account</a>
 							</div>
 						</div>
 					</div>
