--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								</div>
 							</div>
 							<div class="main-block__button animation-opacity _anim-items">
-								<a href="/" class="button  button-big button-yellow rollIn _anim-items">Open Account</a>
+								<a href="/" class="button  button-big button-yellow ">Open Account</a>
 							</div>
 						</div>
 						<div class="main-block__current current">
@@ -253,24 +253,27 @@
 									</div>
 								</div>
 								<div class="current-item__btn">
-									<button class="current-item__btn">Exchange</button>
+									<button class="current-item__btns">Exchange</button>
 								</div>
 								<div class="current-item__valuta valuta">
 									<div class="valuta__title">
 										<h4>Supported Currency</h4>
 									</div>
-									<div id="rupiiUsd" class="valuta__item">
-										<p  class="valuta-trigger">$</p>
+									<div class="valuta__body">
+										<div id="rupiiUsd" class="valuta__item">
+											<p  class="valuta-trigger">$</p>
+										</div>
+										<div id="euroUsd" class="valuta__item">
+											<p  class="valuta-trigger">€</p>
+										</div>
+										<div id="uanUsd" class="valuta__item _active-tab">
+											<p  class="valuta-trigger">₴</p>
+										</div>
+										<div id="zlUsd" class="valuta__item">
+											<p   class="valuta-trigger">zL</p>
+										</div>
 									</div>
-									<div id="euroUsd" class="valuta__item">
-										<p  class="valuta-trigger">€</p>
-									</div>
-									<div id="uanUsd" class="valuta__item _active-tab">
-										<p  class="valuta-trigger">₴</p>
-									</div>
-									<div id="zlUsd" class="valuta__item">
-										<p   class="valuta-trigger">zL</p>
-									</div>
+									
 								</div>
 							</div>
 						</div>
@@ -289,8 +292,8 @@
 								</div>
 							</div>
 							<div class="main-products__block-button block-button ">
-								<a href="/" class="block-button__button button  trigger-button-for button-active _active-tab trigger rollIn _anim-items">For Individuals</a>
-								<a href="/" class="block-button__button button  trigger-button-for button-active trigger rollIn _anim-items">For Businesses</a>
+								<a href="/" class="block-button__button button  trigger-button-for button-active _active-tab trigger ">For Individuals</a>
+								<a href="/" class="block-button__button button  trigger-button-for button-active trigger ">For Businesses</a>
 							</div>
 						</div>
 						<div class="main-products__content">
@@ -883,8 +886,8 @@
 								</div>
 							</div>
 							<div class="main-slider__block-button block-button">
-								<a href="/" class="block-button__button button button-trigger-slider trigger-2 _active-tab rollIn _anim-items">For Individuals</a>
-								<a href="/" class="block-button__button button button-trigger-slider trigger-2 rollIn _anim-items">For Businesses</a>
+								<a href="/" class="block-button__button button button-trigger-slider trigger-2 _active-tab ">For Individuals</a>
+								<a href="/" class="block-button__button button button-trigger-slider trigger-2 ">For Businesses</a>
 							</div>
 						</div>
 						<div class="main-slider__content">
@@ -1169,7 +1172,7 @@
 								</div>
 							</div>
 							<div class="main-start__button">
-								<a href="/" class="button button-big button-yellow rollIn _anim-items">Open Account</a>
+								<a href="/" class="button button-big button-yellow ">Open Account</a>
 							</div>
 						</div>
 					</div>
