--- a/signup.html
+++ b/signup.html
@@ -92,7 +92,7 @@
 									<div class="form__item">
 										<input id="i-4" type="password" required="false" class="form__input " placeholder="Enter your Password" name="password">
 										<div id="i-4" class="form__img">
-											<img src="img/page/Vector.svg" alt="eye">
+											<img src="img/Vector.svg" alt="eye">
 										</div>
 									</div>
 								</div>
@@ -145,7 +145,7 @@
 										  <span></span>
 									</div>
 									<div class="main-forms__img card-header__image">
-										<a href="/"><svg class="main-forms__svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
+										<a href="/"><svg class="main-forms__svg main-forms__svg-3" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
 											<path d="M26.0533 21.4311C25.6374 22.3919 25.1451 23.2763 24.5748 24.0893C23.7973 25.1978 23.1608 25.9651 22.6702 26.3911C21.9097 27.0905 21.095 27.4487 20.2225 27.469C19.5961 27.469 18.8407 27.2908 17.9614 26.9292C17.0792 26.5694 16.2685 26.3911 15.5272 26.3911C14.7498 26.3911 13.916 26.5694 13.0241 26.9292C12.1309 27.2908 11.4114 27.4792 10.8612 27.4979C10.0245 27.5335 9.19055 27.1652 8.35811 26.3911C7.8268 25.9277 7.16224 25.1333 6.36612 24.0079C5.51195 22.8061 4.80971 21.4124 4.25955 19.8236C3.67036 18.1074 3.375 16.4456 3.375 14.8367C3.375 12.9938 3.77323 11.4043 4.57087 10.0722C5.19775 9.00232 6.03172 8.15833 7.0755 7.53875C8.11928 6.91917 9.24708 6.60344 10.4616 6.58324C11.1262 6.58324 11.9977 6.78881 13.0807 7.19281C14.1606 7.59817 14.854 7.80373 15.158 7.80373C15.3853 7.80373 16.1556 7.56337 17.4615 7.08417C18.6964 6.63977 19.7387 6.45576 20.5925 6.52824C22.9062 6.71497 24.6444 7.62702 25.8004 9.27018C23.7311 10.5239 22.7076 12.28 22.7279 14.5327C22.7466 16.2874 23.3832 17.7476 24.6342 18.9069C25.2011 19.445 25.8343 19.8609 26.5388 20.1563C26.386 20.5993 26.2247 21.0237 26.0533 21.4311ZM20.747 0.550401C20.747 1.92571 20.2445 3.20984 19.243 4.39842C18.0344 5.8114 16.5725 6.62789 14.9873 6.49905C14.9671 6.33405 14.9554 6.1604 14.9554 5.97792C14.9554 4.65762 15.5301 3.24464 16.5508 2.08933C17.0604 1.50438 17.7085 1.01801 18.4944 0.630012C19.2787 0.247807 20.0205 0.0364399 20.7181 0.000244141C20.7385 0.184102 20.747 0.367972 20.747 0.550383V0.550401Z" fill="#CAFF33"/>
 										</svg></a>
 										
@@ -169,8 +169,8 @@
 								</div>
 							</div>
 							<div class="main-slider__block-button block-button">
-								<a href="/" class="block-button__button button button-trigger-slider trigger-2 _active-tab rollIn _anim-items" >For Individuals</a>
-								<a href="/" class="block-button__button button button-trigger-slider trigger-2 rollIn _anim-items">For Businesses</a>
+								<a href="/" class="block-button__button button button-trigger-slider trigger-2 _active-tab " >For Individuals</a>
+								<a href="/" class="block-button__button button button-trigger-slider trigger-2 ">For Businesses</a>
 							</div>
 						</div>
 						<div class="main-slider__content">
@@ -179,7 +179,7 @@
 									<div class="main-slider__swiper-wrapper swiper-wrapper">
 										<div class="main-slider__slide slide swiper-slide">
 											<div class="slide__image">
-												<svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none">
+												<svg  xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none">
 													<path  d="M4.84402 20.9212L4.84401 20.9212L4.84306 20.924C3.97266 23.4974 3.53369 25.9874 3.53369 28.3915V35.5374C3.53369 36.3658 4.20526 37.0374 5.03369 37.0374H14.2309C15.0593 37.0374 15.7309 36.3658 15.7309 35.5374L15.7309 28.3116L15.7308 28.3074C15.7054 25.2764 16.1886 22.5199 17.1727 20.0314C18.0778 17.7775 19.1728 15.6054 20.4579 13.5149C20.8813 12.8261 20.699 11.9128 20.0145 11.4567L14.9228 8.06382L14.9228 8.06382C14.3741 7.69814 13.6366 7.72756 13.1287 8.17732C11.4242 9.68636 9.87445 11.4881 8.4778 13.579L8.47711 13.58C6.95041 15.878 5.73918 18.3253 4.84402 20.9212ZM24.5557 20.9212L24.5547 20.924C23.6843 23.4974 23.2454 25.9874 23.2454 28.3915V35.5374C23.2454 36.3658 23.917 37.0374 24.7454 37.0374H33.9425C34.771 37.0374 35.4425 36.3658 35.4425 35.5374L35.4426 28.3116L35.4425 28.3074C35.4171 25.2765 35.9003 22.5201 36.8843 20.0317C37.7894 17.7777 38.8844 15.6055 40.1696 13.5149C40.593 12.8261 40.4107 11.9128 39.7261 11.4567L34.6345 8.06382L34.6345 8.06382C34.0858 7.69814 33.3483 7.72756 32.8403 8.17732L33.1718 8.55167L32.8403 8.17732C31.1359 9.68636 29.5861 11.4881 28.1895 13.579L28.1888 13.58C26.6621 15.878 25.4509 18.3253 24.5557 20.9212Z" fill="url(#paint0_linear_108_2662)" stroke="#CAFF33"/>
 													<defs>
 													<linearGradient id="paint0_linear_108_2662" x1="22.1513" y1="8.06677" x2="22.1513" y2="36.5374" gradientUnits="userSpaceOnUse">
