--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="main-tabs__content ">
+						<div class="main-tabs__content _anim-items">
 							<div class="main-tabs__trigger-items trigger-items ">
 								<div class="trigger-items__link">
 									<a class="trigger" href="">Online Banking</a>
@@ -685,7 +685,7 @@
 									<div class="tab-content__block block">
 										<div class="block__title title-22">
 											<h3>Mobile Banking App</h3>
-											<svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
+											<svg  width="34" height="34" viewBox="0 0 34 34" fill="none">
 												<path  class="path1" d="M8.50007 26.9166L26.9167 8.49994M26.9167 8.49994V26.1799M26.9167 8.49994H9.23673" stroke="#CAFF33" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 											</svg>
 										</div>
