--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="main-tabs__content _anim-items">
+						<div class="main-tabs__content ">
 							<div class="main-tabs__trigger-items trigger-items ">
 								<div class="trigger-items__link">
 									<a class="trigger" href="">Online Banking</a>
