--- a/security.html
+++ b/security.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240418184429">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418184429" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20240418184429">
 	<title>Главная</title>
 
 </head>
@@ -22,8 +22,7 @@
                     <picture>
                         <source media="(min-width:1280px )" type="image/svg+xml" srcset="img/header/logo.svg">
                         <source media="(min-width:768px )" type="image/svg+xml" srcset="img/header/logo1280.svg">
-                        <source media="(min-width:280px )" type="image/svg+xml" srcset="img/header/logomobile.svg">
-                        <img src="img/header/logo.svg" alt="logo">
+                        <img src="img/header/logomobile.svg" alt="logo">
                     </picture>
                 </a>
             </div>
@@ -31,28 +30,28 @@
                 <nav class="header__menu menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a id="menu-item" href='index.html' class="menu__link menu__link-m button">Home</a>
+                            <a  href='index.html' class="menu__link menu__link-m button">Home</a>
                             <span></span>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='career.html' class="menu__link menu__link-m  button">Careers</a>
+                            <a  href='career.html' class="menu__link menu__link-m  button">Careers</a>
                             <span></span>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='about.html' class="menu__link menu__link-m button">About</a>
+                            <a  href='about.html' class="menu__link menu__link-m button">About</a>
                             <span></span>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='security.html' class="menu__link menu__link-m menu__link-m button">Security</a>
+                            <a  href='security.html' class="menu__link menu__link-m menu__link-m button">Security</a>
                             <span></span>
                         </li>
                     </ul>
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a id="menu-item" href='signup.html' class="menu__link menu__link-m button button-black">Sign Up</a>
+                            <a  href='signup.html' class="menu__link menu__link-m button button-black">Sign Up</a>
                         </li>
                         <li class="menu__item">
-                            <a id="menu-item" href='login.html' class=" menu__link-y button">Login</a>
+                            <a  href='login.html' class="menu__link-y button">Login</a>
                         </li>
                     </ul>   
                 </nav>
@@ -83,7 +82,7 @@
                             </div>
                             <div class="main-welcome__image">
                                 <picture>
-                                    <source media="(min-width: 1280px)" type="png" srcset="img/page/bg-4-1280.png">
+                                    <source media="(min-width: 1280px)" type="image/png" srcset="img/page/bg-4-1280.png">
                                     <img src="img/page/bg-4.png" alt="image">
                                 </picture>
                                 
@@ -237,7 +236,7 @@
 								<svg  xmlns="http://www.w3.org/2000/svg" width="22" height="23" viewBox="0 0 22 23" fill="none">
 								<path class="main-asked__path" d="M16.5 8.75L11 14.25L5.5 8.75" stroke="white" stroke-width="2"/>
 								</svg>
-							<p/p>
+							</p>
 						</div>
 					</div>
 				</section>
@@ -331,7 +330,7 @@
     </div>
 </footer>
 		</div>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-		<script src="js/app.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20240418184429"></script>
+		<script src="js/app.min.js?_v=20240418184429"></script>
 	</body>
 </html>
