--- a/security.html
+++ b/security.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418204542">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240418210911">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418204542" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20240418204542">
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418210911" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20240418210911">
 	<title>Security</title>
 
 </head>
@@ -83,8 +83,8 @@
                             </div>
                             <div class="main-welcome__image">
                                 <picture>
-                                    <source media="(min-width: 1280px)" type="image/png" srcset="img/page/bg-4-1280.png">
-                                    <img src="img/page/bg-4.png" alt="image">
+                                    <source media="(min-width: 1280px)" type="image/webp" srcset="img/page/bg-4-1280.webp">
+                                    <img src="img/page/bg-4.webp" alt="image">
                                 </picture>
                                 
                             </div>
@@ -331,7 +331,7 @@
     </div>
 </footer>
 		</div>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20240418204542"></script>
-		<script src="js/app.min.js?_v=20240418204542"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20240418210911"></script>
+		<script src="js/app.min.js?_v=20240418210911"></script>
 	</body>
 </html>
